# assignment_django

./: .json  package-lock.json  pyproject.toml
bookings/: admin.py  models.py
bookings/migrations/: 0001_initial.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_rename_chat_room_message_room.py
experiences/: admin.py  models.py  serializers.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
templates/tweets/: tweet_list.html
tweet/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_gender.py
wishlists/migrations/: 0001_initial.py
